--- a/Login/Login/MenuPage.xaml
+++ b/Login/Login/MenuPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Login.MenuPage"
-             Title="Menú Principal">
+             Title="Menú Principal"
+             Shell.NavBarIsVisible="False">
 
     <StackLayout Padding="20" Spacing="20">
         <Label Text="Bienvenido" FontSize="24" HorizontalOptions="Center"/>
@@ -10,6 +11,8 @@
         <Button Text="Ver datos personales" Clicked="OnVerDatosPersonalesClicked"/>
         <Button Text="Servicios asignados" Clicked="OnServiciosAsignadosClicked"/>
         <Button Text="Servicios ejecutados" Clicked="OnServiciosEjecutadosClicked"/>
+        <Label/>
+        <Button Text="Cerrar sesión" Clicked="OnCerrarSesionClicked"/>
     </StackLayout>
     
 </ContentPage>
