--- a/Login/Login/ServiciosEjecutadosPage.xaml
+++ b/Login/Login/ServiciosEjecutadosPage.xaml
@@ -2,13 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Login.ServiciosEjecutadosPage"
-             Title="">
+             Title=""
+             Shell.NavBarIsVisible="False">
 
     <StackLayout Padding="20" Spacing="20">
         <Label Text="Servicios Ejecutados" FontSize="24" HorizontalOptions="Center"/>
 
-        <Label Text="Nolose"/>
-        <Label Text="Cosa"/>
+        <Label Text="Nolose" FontSize="18"/>
+        <Label Text="Cosa" FontSize="18"/>
+        <Label/>
+
+        <Button Text="Volver" Clicked="OnVolverClicked"/>
     </StackLayout>
     
 </ContentPage>
