--- a/Login/Login/ServiciosEjecutadosPage.xaml
+++ b/Login/Login/ServiciosEjecutadosPage.xaml
@@ -8,8 +8,7 @@
     <StackLayout Padding="20" Spacing="20">
         <Label Text="Servicios Ejecutados" FontSize="24" HorizontalOptions="Center"/>
 
-        <Label Text="Nolose" FontSize="18"/>
-        <Label Text="Cosa" FontSize="18"/>
+        <Label x:Name="Lista" FontSize="18"/>
         <Label/>
 
         <Button Text="Volver" Clicked="OnVolverClicked"/>
