--- a/Login/Login/ServiciosAsignadosPage.xaml
+++ b/Login/Login/ServiciosAsignadosPage.xaml
@@ -8,6 +8,16 @@
     <StackLayout Padding="20" Spacing="20">
         <Label Text="Servicios Asignados" FontSize="24" HorizontalOptions="Center"/>
 
+        <CollectionView ItemsSource="{Binding Servicios}" SelectionMode="Single" SelectionChanged="OnServicioSelected">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Frame BorderColor="Gray" Margin="5" Padding="10">
+                        <Label Text="{Binding Nombre}" FontSize="18" />
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
         <Label x:Name="Lista" FontSize="18"/>
         <Label/>
 
