--- a/Login/Login/DetallesServicioPage.xaml
+++ b/Login/Login/DetallesServicioPage.xaml
@@ -10,6 +10,9 @@
         <Label Text="{Binding Detalle}" FontSize="18" HorizontalOptions="Start"/>
         <Label/>
 
+        <Button Text="Rechazar servicio" TextColor="White" BackgroundColor="Red" 
+                Clicked="OnRechazarServicioClicked"/>
+
         <Button Text="Volver" Clicked="OnVolverClicked"/>
     </StackLayout>
     
