--- a/Login/Login/ServiciosAsignadosPage.xaml
+++ b/Login/Login/ServiciosAsignadosPage.xaml
@@ -8,20 +8,25 @@
     <StackLayout Padding="20" Spacing="20">
         <Label Text="Servicios Asignados" FontSize="24" HorizontalOptions="Center"/>
 
-        <CollectionView ItemsSource="{Binding Servicios}" SelectionMode="Single" SelectionChanged="OnServicioSelected">
+        <CollectionView ItemsSource="{Binding Servicios}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame BorderColor="Gray" Margin="5" Padding="10">
-                        <Label Text="{Binding Nombre}" FontSize="18" />
+                    <Frame BorderColor="Gray" Margin="5" Padding="10" HorizontalOptions="FillAndExpand">
+                        <StackLayout>
+                            <Label Text="{Binding Nombre}" FontSize="18" HorizontalOptions="StartAndExpand">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="OnServicioTapped" CommandParameter="{Binding .}"/>
+                                </Label.GestureRecognizers>
+                            </Label>
+                        </StackLayout>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <Label x:Name="Lista" FontSize="18"/>
         <Label/>
 
         <Button Text="Volver" Clicked="OnVolverClicked"/>
     </StackLayout>
-    
+
 </ContentPage>
