--- a/Login/Login/DatosPersonalesPage.xaml
+++ b/Login/Login/DatosPersonalesPage.xaml
@@ -6,13 +6,24 @@
              Shell.NavBarIsVisible="False">
 
     <StackLayout Padding="20" Spacing="20">
-        <Label Text="Datos Personales" FontSize="24" HorizontalOptions="Center"/>
-    
-        <Label x:Name="Nombre" FontSize="18"/>
-        <Label x:Name="Id" FontSize="18"/>
-        <Label x:Name="Correo" FontSize="18"/>
+        <Label Text="Nombre" FontSize="18"/>
+        <Entry Text="{Binding Nombre, Mode=TwoWay}" Placeholder="Ingrese su nombre"/>
+
+        <Label Text="RUT/CI" FontSize="18"/>
+        <Entry Text="{Binding Id, Mode=TwoWay}" Placeholder="Ingrese su RUT/CI" Keyboard="Id"/>
+
+        <Label Text="Correo Electrónico" FontSize="18"/>
+        <Entry Text="{Binding Correo, Mode=TwoWay}" Placeholder="Ingrese su correo electrónico" Keyboard="Email"/>
+
+        <Label Text="Teléfono" FontSize="18"/>
+        <Entry Text="{Binding Telefono, Mode=TwoWay}" Placeholder="Ingrese su número de teléfono" Keyboard="Telephone"/>
+
         <Label/>
 
+        <Button Text="Guardar Cambios"
+                BackgroundColor="Green"
+                TextColor="White"
+                Command="{Binding GuardarCommand}"/>
         <Button Text="Volver" Clicked="OnVolverClicked"/>
     </StackLayout>
     
